[package]
name = "monkey-interp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "monkey_lib"
path = "lib/lib.rs"

[[bin]]
name = "monkey_exec"
path = "src/main.rs"

[[bin]]
name = "monkey_repl"
path = "repl/main.rs"

[profile.test]
opt-level = 2
